# COPYRIGHT 2026, Seho Lee.
#
# THIS FILE IS PROVIDED BY THE COPYRIGHT HOLDERS UNDER THE FOLLOWING TERMS:
#
# 1. ANY PERSON, GROUP, COMPANY, GOVERNMENT, OR OTHER LEGAL ENTITY THAT OBTAINS A
#    COPY OF THIS FILE IS PERMITTED TO USE, REPRODUCE, MODIFY, AND DISTRIBUTE IT
#    FOR ANY LAWFUL PURPOSE, INCLUDING COMMERCIAL USE.
#
# 2. ANY REPRODUCTION, MODIFICATION, AND DISTRIBUTION OF THIS FILE MUST RETAIN THE
#    COPYRIGHT NOTICE ABOVE. IF THIS FILE IS USED IN A PRODUCT, THE COPYRIGHT
#    NOTICE MUST BE INCLUDED IN THE DOCUMENTATION OR OTHER MATERIALS PROVIDED
#    WITH THE PRODUCT, WHERE REASONABLY PRACTICABLE.
#
# 3. THIS FILE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#    FITNESS FOR A PARTICULAR PURPOSE, AND NONINFRINGEMENT. TO THE MAXIMUM EXTENT
#    PERMITTED BY APPLICABLE LAW, THE AUTHORS OR COPYRIGHT HOLDERS SHALL NOT BE
#    LIABLE FOR ANY CLAIM, DAMAGES, OR OTHER LIABILITY ARISING FROM, OUT OF, OR
#    IN CONNECTION WITH THE USE OF THIS FILE.
#
# END OF TERMS

[package]
name = "nphotoman"
version = "0.1.0"
edition = "2024"

[dependencies]
rsraw = "0.1.1"
rayon = "1.10"
image = "0.25"
walkdir = "2.5"
num_cpus = "1.16"
dirs = "6.0.0"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"
lcms2 = "6"
rexiv2 = { version = "0.10", optional = true }

[features]
default = []
exif = ["rexiv2"]
