# COPYRIGHT 2026, Seho Lee.
#
# This file is provided by the copyright holders under the following terms:
#
# - Any person, group, company, government body or other entity that obtains a
#   copy of this file is permitted to use, copy, produce, modify and distribute it
#   for any lawful purpose, including commercial use.
#
# - Any copy, production, modification and distribution of this file must retain
#   the copyright notice above. If this file is used in a physical or digital
#   product, the copyright notice must be included in the documents or other
#   materials provided with the product, where reasonably practicable.
#
# - If anyone begins any patent action against any entity, including a cross-claim
#   or counterclaim lawsuit, alleging that this file or the contribution within it
#   infringes their patent, any patent licences and permissions granted to the
#   claimant under this licence terminate as of the date that such patent action
#   is filed.
#
# - This file is provided ‘As Is’ without any explicit or implied warranty. Any
#   warranty, including the warranties of merchantability, fitness for a
#   particular purpose and non-infringement, is not provided with this file. To
#   the maximum extent permitted by applicable law, the authors or copyright
#   holders shall not be liable for any claim, damages or other liabilities
#   arising from the use of this file.
#
# End of Terms
#

[package]
name = "nphotoman"
version = "0.1.0"
edition = "2024"

[dependencies]
rsraw = "0.1.1"
image = "0.25"
walkdir = "2.5"
num_cpus = "1.16"
dirs = "6.0.0"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"
lcms2 = "6"
little_exif = "0.6.23"
crossbeam = "0.8.4"
rayon = "1.12.0"
tiff = "0.11.3"
